--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,6 +7,7 @@ one:
   age: 1
   age_range: 1
   session_token: MyString
+  feed_url: MyString
 
 two:
   password_digest: MyString
@@ -15,3 +16,4 @@ two:
   age: 1
   age_range: 1
   session_token: MyString
+  feed_url: MyString
